# luckyde

acc/shiffrin/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  Shiffrin.lde  TODO  aclocal.m4  config.h.in  configure  configure.ac  xpad.desktop.in
acc/shiffrin/autopackage/: Makefile.in
acc/shiffrin/doc/: Makefile.am  Makefile.in  xpad-user-help.txt  xpad.1
acc/shiffrin/images/: Makefile.in
acc/shiffrin/po/: POTFILES.in  Xpad.pot  af.po  ar.po  bg.po  cs.po  da.po  de.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  si.po  sk.po  sl.po  sr.po  sv.po  th.po  (+5 more)
acc/shiffrin/src/: Makefile.am  Makefile.in  fio.c  fio.h  help.c  help.h  prefix.c  prefix.h  xpad-app.c  xpad-app.h  xpad-grip-tool-item.c  xpad-grip-tool-item.h  xpad-pad-group.c  xpad-pad-group.h  xpad-pad-properties.c  xpad-pad-properties.h  xpad-pad.c  xpad-pad.h  xpad-periodic.c  xpad-periodic.h  xpad-preferences.c  xpad-preferences.h  xpad-session-manager.c  xpad-session-manager.h  xpad-settings.c  xpad-settings.h  xpad-text-buffer.c  xpad-text-buffer.h  xpad-text-view.c  xpad-text-view.h  xpad-toolbar.c  xpad-toolbar.h  xpad-tray.c  xpad-tray.h  xpad-undo.c  xpad-undo.h
exo/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
garcon/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gtk-lde-engine/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  gtk-xfce-engine-2.spec  gtk-xfce-engine-2.spec.in
gtk-lde-engine/src/: Makefile.am  Makefile.in  cairo-support.c  cairo-support.h  ge-support.h  general-support.h  gradient_draw.c  gradient_draw.h  lde_rc_style.c  lde_theme_draw.c  lde_theme_main.c  xfce_rc_style.h  xfce_style.h
gtk-lde-engine/themes/: Makefile.am  Makefile.in
gtk-lde-engine/themes/b5/: Makefile.am  Makefile.in
gtk-lde-engine/themes/b5/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/basic/: Makefile.am  Makefile.in
gtk-lde-engine/themes/basic/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/cadmium/: Makefile.am  Makefile.in
gtk-lde-engine/themes/cadmium/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/curve/: Makefile.am  Makefile.in
gtk-lde-engine/themes/curve/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/dawn/: Makefile.am  Makefile.in
gtk-lde-engine/themes/dawn/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/dusk/: Makefile.am  Makefile.in
gtk-lde-engine/themes/dusk/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/flat/: Makefile.am  Makefile.in
gtk-lde-engine/themes/flat/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/kde2/: Makefile.am  Makefile.in
gtk-lde-engine/themes/kde2/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/kolors/: Makefile.am  Makefile.in
gtk-lde-engine/themes/kolors/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/light/: Makefile.am  Makefile.in
gtk-lde-engine/themes/light/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/orange/: Makefile.am  Makefile.in
gtk-lde-engine/themes/orange/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/redmondxp/: Makefile.am  Makefile.in
gtk-lde-engine/themes/redmondxp/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/saltlake/: Makefile.am  Makefile.in
gtk-lde-engine/themes/saltlake/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/smooth/: Makefile.am  Makefile.in
gtk-lde-engine/themes/smooth/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/stellar/: Makefile.am  Makefile.in
gtk-lde-engine/themes/stellar/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/winter/: Makefile.am  Makefile.in
gtk-lde-engine/themes/winter/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.0/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.2/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.2/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.4/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.4/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.6/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce-4.6/gtk-2.0/: Makefile.am  Makefile.in
gtk-lde-engine/themes/xfce/gtk-2.0/: Makefile.am  Makefile.in
ldconf/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
lde-appfinder/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
lde-datetime-plugin/: Makefile.in  aclocal.m4  config.h.in  configure  configure.in
lde-dev-tools/: ChangeLog  Makefile.in  configure  configure.ac
lde-f.lux/: TODO.phm
lde-file-man/: xfe_1.41-1trusty_amd64.deb
lde-panel/: AUTHORS
lde-panel/migrate/: Makefile.am  Makefile.in  default.xml  default.xml.in  main.c  migrate-46.c  migrate-46.h  migrate-config.c  migrate-config.h  migrate-default.c  migrate-default.h
lde-panel/panel/: Makefile.am  Makefile.in  main.c  panel-application.c  panel-application.h  panel-base-window.c  panel-base-window.h  panel-dbus-client-infos.h  panel-dbus-client.c  panel-dbus-client.h  panel-dbus-service-infos.h  panel-dbus-service-infos.xml  panel-dbus-service.c  panel-dbus-service.h  panel-dialogs.c  panel-dialogs.h  panel-item-dialog.c  panel-item-dialog.h  panel-itembar.c  panel-itembar.h  panel-module-factory.c  panel-module-factory.h  panel-module.c  panel-module.h  panel-plugin-external-46.c  panel-plugin-external-46.h  panel-plugin-external-wrapper-infos.h  panel-plugin-external-wrapper-infos.xml  panel-plugin-external-wrapper.c  panel-plugin-external-wrapper.h  panel-plugin-external.c  panel-plugin-external.h  panel-preferences-dialog-ui.h  panel-preferences-dialog.c  panel-preferences-dialog.glade  panel-preferences-dialog.h  panel-tic-tac-toe.c  panel-tic-tac-toe.h  panel-window.c  panel-window.h
(+1116 files in other folders)
